--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
 certifi==2021.5.30
-charset-normalizer==2.0.4
+charset-normalizer==2.0.6
 click==8.0.1
+fillpdf==0.1.0
 idna==3.2
-numpy==1.20.3
-pandas==1.2.4
-python-dateutil==2.8.1
+numpy==1.21.2
+pandas==1.3.3
+pdf2image==1.16.0
+pdfrw==0.4
+Pillow==8.3.2
+psycopg2==2.9.2
+PyMySQL==1.0.2
+PyPDF2==1.26.0
+python-dateutil==2.8.2
+python-dotenv==0.19.2
 pytz==2021.1
 requests==2.26.0
 six==1.16.0
-urllib3==1.26.6
+SQLAlchemy==1.4.27
+urllib3==1.26.7
