--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ HNTTAX_DATABASE_PORT=5432
 HNTTAX_DATABASE_UN=postgres
 HNTTAX_DATABASE_PW=invest
 HNTTAX_DATABASE_NAME=hnttax
+
+HELIUM_API_URL=https://api.helium.io/v1/
