--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+boto3==1.20.20
+botocore==1.23.20
 certifi==2021.5.30
 charset-normalizer==2.0.6
 click==8.0.1
 fillpdf==0.1.0
 idna==3.2
+jmespath==0.10.0
+loguru==0.5.3
 numpy==1.21.2
 pandas==1.3.3
 pdf2image==1.16.0
@@ -15,6 +19,7 @@ python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.1
 requests==2.26.0
+s3transfer==0.5.0
 six==1.16.0
 SQLAlchemy==1.4.27
 urllib3==1.26.7
